# v8-monolith

./: README.md  args.linux.x64.gn  args.mac.arm64.gn  build.sh  test.sh  test_main.cc  v8-version.txt  v8_wrapper.cc  v8_wrapper.h
.github/workflows/: build.yml
ci/: build.sh  detect.sh  draft-release.sh  fetch.sh  package.sh  publish-release.sh  test.sh
